# 2024_CPL

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.c
01-exam/: Bye-JonaBell  Bye-JonaBell.c  tictactoe  tictactoe_1
02-exam/: coded-lock.c  coded-lock_1.c  coded-lock_2.c  wanderbell.c
03-exam/: t3.c
1-types-io/: CMakeLists.txt  address.c  ascii.c  change.c  equation.c  gas.c  gravity.c  julian.c  pi-1.c  pi-2.c  sensor.c  time.c
10-function-pointers/: function_pointer.c
11-linked-list/: cycle-detect.c  file-management_1.c  keyboard.c  keyboard.txt  keyboard_1.c  keyboard_2.c  keyboard_stack.c  stack_pour.c  stack_pour_1.c  string-hash.c
2-if-for-array/: blackhole.c  clock.c  collatz.cpp  converter-1.c  factorial-1.c  factorial.c  inverse.c  leap.c  prime.c  rank.c  selfpower.c  series.c  single.c  standup.c  triangle.c
3-for-a-while/: a+b_re.c  b-ternary-1.c  b-ternary-2.c  bubble-sort.c  bubble-sort_cheker.c  calculator.c  calendar.c  char_test.c  demical.c  flip.c  gcd.c  josephus.c  multiplication-table.c  palindrome-1.c  palindrome-2.c  quick_sort.cpp  read_num.c  statistics-2.c  super-cal.c
4-loops/: behaviors.c  bit.c  equation-2.c  formation.c  guess.c  insertation_sort.c  life.c  mach_1.c  magic-square.c  match.c  matrix-mult.c  mines.c  obstacles.c  seer.c  similarity.c  softmax.c  sudoku.c  (+1 more)
ramfshell-main/ramfshell-main/: .gitignore  CMakeLists.txt  Makefile  README.md  compile.ps1  main.c
ramfshell-main/ramfshell-main/fs/: ramfs.c
ramfshell-main/ramfshell-main/include/: ramfs.h  shell.h
ramfshell-main/ramfshell-main/sh/: shell.c
(+170 files in other folders)
